--- a/templates/results.html
+++ b/templates/results.html
@@ -3,21 +3,45 @@
 {% block title %}Thanks{% endblock %}
 
 {% block content %}
-    <h1>Results</h1>
+    <h1>Your results:</h1>
 
     <ul>
 <div class="row">
   <div class="column2">
-      <h2>Thanks for your answer</h2>
   </div>
   <div class="column1" style="background-color:#bbb;">
-     Total Score: {{res[0]}}% <br>
-     Sensitivity: {{res[1]}} <br>
-     Specificity: {{res[2]}} <br>
+     <b>Total Score:</b> {{res[0]}}% <br>
+     <b>Sensitivity:</b> {{res[1]}} <br>
+     <b>Specificity:</b> {{res[2]}} <br>
      <br>
     <p>Do you want to try another one?</p>
 
-   <p><a href="/training">Next</a></p>
-  </div>
+   <p><a href="/training">Try again</a></p>
+<br>
+<center> <h2><font face="verdana"><b>Check your incorrect answers:</b></font></h2> </center><br><br>
+    {% for answer in failed_answers %}
+    {% if answer[2]==1  %}
+    <font face="verdana"> <b> Report result:</b></font> <font face="verdana" color="green">Patological compatible with COVID-19 ---</font>
+    {% elif answer[2]==0  %} 
+    <font face="verdana"><b> Report result:</b></font> <font face="verdana" color="green">Non patological ---</font>
+    {% elif answer[2]==2  %} 
+    <font face="verdana"><b> Report result:</b><font face="verdana" color="green">Patological NON compatible with COVID-19 ---</font> 
+    {% endif %}
+
+
+    {% if answer[3]==1  %}
+     <font face="verdana"><b> User answer:</b></font><font face="verdana" color="red">Patological compatible with COVID-19</font> <br>
+    {% elif answer[3]==0  %} 
+     <font face="verdana"><b> User answer:</b></font><font face="verdana" color="red"> Non patological</font> <br>
+    {% elif answer[3]==2  %} 
+     <font face="verdana"><b> User answer:</b></font><font face="verdana" color="red"> Patological NON compatible with COVID-19</font> <br>
+    {% endif %}
+     <img src="static/img/{{answer[1]}}.DCM.JPG" width="100%" height="100%">
+     <br><br><br>
+     
+     
+    {% endfor %}
+
+ </div>
 </div>
 {% endblock %}
