--- a/templates/training.html
+++ b/templates/training.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
     <div class="column2" style="background-color:#bbb;">
-    <form  method="POST">
+    <form action="/send_results" method="POST">
     {{ form.csrf_token }}
     <p>
         {{ form.type_of_diag.label }}{{ form.type_of_diag }}
