Prediction values added

--- a/templates/results.html
+++ b/templates/results.html
@@ -13,6 +13,9 @@
      <b>Total Score:</b> {{res[0]}}% <br>
      <b>Sensitivity:</b> {{res[1]}} <br>
      <b>Specificity:</b> {{res[2]}} <br>
+     <b>Positive predictive value: </b> {{res[3]}} <br>
+     <b>Negative predictive value: </b> {{res[4]}} <br>
+     
      <br>
     <p>Do you want to try another one?</p>
 
