--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
      <b>Negative predictive value: </b> {{res[4]}} <br>
      
      <br>
-    <p>Do you want to try another one?</p>
+    <p>Do you want to try again?</p>
 
    <p><a href="/training">Try again</a></p>
 <br>
