--- a/templates/base.html
+++ b/templates/base.html
@@ -1,55 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<link href="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.css" rel="stylesheet"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-<script src="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.min.js"></script>
-<script type="text/javascript">
-$(function () {
-    $('.zoom').zoomy();
-});
-</script>
-<style> 
-.column1 {
-  float: left;
-  width: 60%;
-  padding: 10px;
-}
-.column2 {
-  float: left;
-  width: 20%;
-  padding: 10px;
-}
-.column3 {
-  float: left;
-  width: 90%;
-  padding: 10px;
-}
-.column4 {
-  float: left;
-  width: 10%;
-  padding: 10px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-img { 
-  width:100%; 
-  height:100%; 
-} 
-</style>
-    <meta charset="UTF-8">
-    <title>{% block title %}Title{% endblock %}</title>
-</head>
-<body bgcolor="#E6E6FA">
-    {% if message %}
-        <p>Note: {{ message }}</p>
-    {% endif %}
-    {% block content %}
+<html lang="es">
+  <head>
+    {% block head %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.min.js"></script>
+    <script type="text/javascript">
+      $(function () {
+        $('.zoom').zoomy();
+      });
+    </script>
+    {% assets "scss_all" %}
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
+    {% endassets %}
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/favicon.ico') }}"/>
+    <title>{% block title %}{% endblock %} - Covid-19 Training</title>
+    <meta charset="UTF-8"/>
     {% endblock %}
-</body>
+  </head>
+  <body>
+    <div class="page-wrapper">
+      <div class="content">
+        {% block content %}
+        {% endblock %}
+      </div>
+      <div class="footer">
+        {% block footer %}
+        <a href="/">Política de utilización ética</a>
+         | <a href="/">Política de privacidad</a>
+         | <a href="/">Términos y condiciones</a>
+         | <a href="/">Copyright &copy; IFCA - CSIC</a>
+        {% endblock %}
+      </div>
+    </div>
+    {% if message %}
+      <p>Note: {{ message }}</p>
+    {% endif %}
+  </body>
 </html>
