--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,9 @@
       </div>
       <div class="footer">
         {% block footer %}
-        <a href="/">Política de utilización ética</a>
-         | <a href="/">Política de privacidad</a>
-         | <a href="/">Términos y condiciones</a>
+        <a href="/">Política de privacidad y aviso legal</a>
+         | <a href="/">Términos y condiciones de uso</a>
+         | <a href="/">Contacta con nosotros</a>
          | <a href="/">Copyright &copy; IFCA - CSIC</a>
         {% endblock %}
       </div>
