--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,67 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block head %}
-  {{ super() }}
-  <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> -->
+{{ super() }}
+<script type="text/javascript">
+  var submitted = false;
+  var errorMessage = "No has aceptado los términos y condiciones"
+  function isChecked() {
+    document.getElementById("terms").checked; 
+  }
+  function checkTerms() {
+    document.getElementById('error').innerHTML = !document.getElementById("terms").checked && this.submitted ? this.errorMessage : "";
+  }
+  function submit() {
+    if (document.getElementById("terms").checked) {
+      document.location.href = "/logged"
+    }
+    else {
+      document.getElementById('error').innerHTML = this.errorMessage
+    }
+    this.submitted = true;
+  }
+</script>
 {% endblock %}
 
 {% block content %}
   <div class="login">
-    {% if loggedin  %}
-    <div>
-      Hello, bitchi {{ user }}, <a href="/logged">See private</a> 
+    <div class="login__avatar">
+      <img
+        src="{{ url_for('static',filename='assets/logo.png') }}"
+        alt="Covid-19 Avatar"
+      >
     </div>
-    {% else %}
-    <div>
-      Iniciar sesión en COVID-19 training:
+    <div class="login__label">
+      {% if loggedin  %}
+        Hola, {{ user }}, bienvenido a COVID-19 training
+      {% else %}
+        Inicia sesión en COVID-19 training
+      {% endif %}
     </div>
-    {% endif %}
     <div>
-      <a href="/logged">
-        <button class="login__button">
-          Log in
-        </button>
-      </a>
+      <button class="login__button" onclick="submit()">
+        {% if loggedin  %}
+          Entrar
+        {% else %}
+          Iniciar sesión
+        {% endif %}
+        <p class="login__error" id="error"></p>
+      </button>
+    </div>
+    <div class="login__terms">
+      <input
+        type="checkbox"
+        id="terms"
+        onclick="checkTerms()"
+        {% if loggedin %}checked{% endif %}
+      >
+      <label for="terms">
+        Acepto los términos y condiciones de uso
+      </label>
     </div>
     {% if loggedin %}
-    <div>
-      <a href="/logout">Log out</a>
+    <div class="login__logout">
+      Si quieres finalizar la sesión, haz <a href="/logout">click aqui</a>.
     </div>
     {% endif %}
   </div>
