--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,50 +1,138 @@
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\000031}}
-.page-wrapper {
-  margin: auto;
-  text-align: center;
-  width: 75%; }
-  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\000035}}
-  .page-wrapper .content {
-    font-size: 20px; }
-    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\000039}}
-    .page-wrapper .footer {
-      font-size: 14px; }
+body {
+  background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA12066_hires.jpg');
+  background-attachment: fixed; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000315}}
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\000036}}
+  button {
+    background: rgba(255, 255, 255, 0.25);
+    border: 1px solid #ffc000;
+    border-radius: 4px;
+    color: whitesmoke;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
+    outline: none;
+    padding: 0.75rem; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000314}}
+    button:hover {
+      background-color: rgba(255, 192, 0, 0.75);
+      color: #272727; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000318}}
+      button:active {
+        background-color: #ffc000;
+        color: black; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000325}}
+.page-wrapper {
+  color: whitesmoke;
+  font-family: Calibri, sans-serif;
+  font-size: 24px;
+  margin: auto;
+  min-height: 98vh;
+  position: relative;
+  text-align: center;
+  width: 50%; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000334}}
+  .page-wrapper .content {
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid #ffc000;
+    border-radius: 4px;
+    padding: 1rem;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    left: 0;
+    right: 0;
+    top: 5rem; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000348}}
+    .page-wrapper .footer {
+      bottom: 0;
+      font-size: 16px;
+      position: absolute;
+      width: 100%; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000352}}
+      .page-wrapper .footer a {
+        color: whitesmoke;
+        text-decoration: none; }
+        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000356}}
+        .page-wrapper .footer a:hover {
+          text-decoration: underline; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000364}}
 .column1 {
   float: left;
   width: 60%;
   padding: 10px; }
 
-  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000321}}
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000370}}
   .column2 {
     float: left;
     width: 20%;
     padding: 10px; }
 
-    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000327}}
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000376}}
     .column3 {
       float: left;
       width: 90%;
       padding: 10px; }
 
-      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000333}}
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000382}}
       .column4 {
         float: left;
         width: 10%;
         padding: 10px; }
 
-        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000340}}
+        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000389}}
         .row:after {
           display: table;
           clear: both; }
 
-          @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000344}}
+          @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/base\.scss}line{font-family:\0000393}}
           img {
             width: 100%;
             height: 100%; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\000031}}
-.login__button {
-  padding: 10px;
-  width: 50%; }
+.login {
+  padding-top: 1rem; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\000033}}
+  .login__avatar {
+    margin: auto;
+    width: 120px; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\000035}}
+    .login__avatar img {
+      border-radius: 8px;
+      border: 1px solid grey; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000312}}
+  .login__label {
+    margin-top: 2rem; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000316}}
+    .login__button {
+      font-weight: bold;
+      margin: 1rem;
+      position: relative;
+      width: 50%; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000323}}
+      .login__error {
+        background-color: #C54842;
+        color: whitesmoke;
+        font-size: 12px;
+        font-weight: bold;
+        left: 3px;
+        position: absolute;
+        top: 36px; }
+        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000333}}
+        .login__terms {
+          margin: 1rem;
+          font-size: 14px; }
+          @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000338}}
+          .login__logout {
+            font-size: 14px; }
+            @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000339}}
+            .login__logout a {
+              color: #ffc000;
+              text-decoration: none; }
+              @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/login\.scss}line{font-family:\0000343}}
+              .login__logout a:hover {
+                text-decoration: underline; }
