--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock %}
+{% block title %}Inicio{% endblock %}
 {% block head %}
-{{ super() }}
-<script type="text/javascript">
-  var submitted = false;
-  var errorMessage = "No has aceptado los términos y condiciones"
-  function isChecked() {
-    document.getElementById("terms").checked; 
-  }
-  function checkTerms() {
-    document.getElementById('error').innerHTML = !document.getElementById("terms").checked && this.submitted ? this.errorMessage : "";
-  }
-  function submit() {
-    if (document.getElementById("terms").checked) {
-      document.location.href = "/logged"
-    }
-    else {
-      document.getElementById('error').innerHTML = this.errorMessage
-    }
-    this.submitted = true;
-  }
-</script>
+  {{ super() }}
+  <script src="{{ url_for('static',filename='controller/login.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -38,15 +20,15 @@
         Inicia sesión en COVID-19 training
       {% endif %}
     </div>
-    <div>
-      <button class="login__button" onclick="submit()">
+    <div class="login__button">
+      <button class="covid-button" onclick="submit()">
         {% if loggedin  %}
           Entrar
         {% else %}
           Iniciar sesión
         {% endif %}
-        <p class="login__error" id="error"></p>
       </button>
+      <p class="login__error" id="error"></p>
     </div>
     <div class="login__terms">
       <input
