--- a/static/styles/base.scss
+++ b/static/styles/base.scss
@@ -3,15 +3,19 @@ body {
   background-attachment: fixed;
 }
 
-button {
+.covid-button {
   background: rgba(255, 255, 255, 0.25);
   border: 1px solid #ffc000;
   border-radius: 4px;
   color: whitesmoke;
+  cursor: pointer;
   font-family: Calibri, sans-serif;
   font-size: 20px;
+  font-weight: bold;
   outline: none;
   padding: 0.75rem;
+  text-decoration: none;
+
   &:hover {
     background-color: rgba(255, 192, 0, 0.75);
     color: rgb(39, 39, 39);
@@ -24,32 +28,31 @@ button {
 
 .page-wrapper {
   color: whitesmoke;
+  display: flex;
+  flex-direction: column;
   font-family: Calibri, sans-serif;
   font-size: 24px;
   margin: auto;
   min-height: 98vh;
   position: relative;
   text-align: center;
-  width: 50%;
 
   .content {
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid #ffc000;
     border-radius: 4px;
-    padding: 1rem;
-    position: absolute;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2rem;
-    left: 0;
-    right: 0;
-    top: 5rem;
+    margin-top: 3.5rem;
+    margin: 3.5rem auto 2rem;
+    padding: 1rem;
+    width: 70%;
   }
 
   .footer {
-    bottom: 0;
     font-size: 16px;
-    position: absolute;
+    height: 2rem; 
+    margin-top: auto;
     width: 100%;
     a {
       color: whitesmoke;
@@ -61,35 +64,6 @@ button {
   }
 }
 
-.column1 {
-  float: left;
-  width: 60%;
-  padding: 10px;
-}
-
-.column2 {
-  float: left;
-  width: 20%;
-  padding: 10px;
-}
-
-.column3 {
-  float: left;
-  width: 90%;
-  padding: 10px;
-}
-
-.column4 {
-  float: left;
-  width: 10%;
-  padding: 10px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  display: table;
-  clear: both;
-}
 img { 
   width:100%; 
   height:100%; 
