--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     {% assets "scss_all" %}
       <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     {% endassets %}
+    <link rel="stylesheet" href="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.css"/>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/favicon.ico') }}"/>
     <title>{% block title %}{% endblock %} - Covid-19 Training</title>
     <meta charset="UTF-8"/>
@@ -25,10 +26,10 @@
       </div>
       <div class="footer">
         {% block footer %}
-        <a href="/">Política de privacidad y aviso legal</a>
-         | <a href="/">Términos y condiciones de uso</a>
-         | <a href="/">Contacta con nosotros</a>
-         | <a href="/">Copyright &copy; IFCA - CSIC</a>
+        <a href="https://docs.google.com/document/d/13m7_rEvVi76YWC1V0cDL1TNJ-S79S2hYVGWZWiW6yco" target="_blank">Política de privacidad y aviso legal</a>
+         | <a href="https://docs.google.com/document/d/13m7_rEvVi76YWC1V0cDL1TNJ-S79S2hYVGWZWiW6yco" target="_blank">Términos y condiciones de uso</a>
+         | <a href="mailto:covid19trainingapp@gmail.com">Contacta con nosotros</a>
+         | Copyright &copy; IFCA - CSIC
         {% endblock %}
       </div>
     </div>
