--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
       </div>
       <div class="footer">
         {% block footer %}
-        <a href="https://docs.google.com/document/d/13m7_rEvVi76YWC1V0cDL1TNJ-S79S2hYVGWZWiW6yco" target="_blank">Política de privacidad y aviso legal</a>
-         | <a href="https://docs.google.com/document/d/13m7_rEvVi76YWC1V0cDL1TNJ-S79S2hYVGWZWiW6yco" target="_blank">Términos y condiciones de uso</a>
+        <a href="https://docs.google.com/file/d/1INgDkmT5DAuWRoF3TZ3JVX5_TeQG2Si_/edit?usp=docslist_api&filetype=msword" target="_blank">Política de privacidad y aviso legal</a>
+         | <a href="https://docs.google.com/file/d/1INgDkmT5DAuWRoF3TZ3JVX5_TeQG2Si_/edit?usp=docslist_api&filetype=msword" target="_blank">Términos y condiciones de uso</a>
          | <a href="mailto:covid19trainingapp@gmail.com">Contacta con nosotros</a>
          | Copyright &copy; IFCA - CSIC
         {% endblock %}
