--- a/static/styles/logged.scss
+++ b/static/styles/logged.scss
@@ -38,3 +38,16 @@
     top: 36px;
   }
 }
+
+#type_of_profile {
+  background-color: rgba(255, 255, 255, 0.25);
+  border: 1px solid #ffc000;
+  color: whitesmoke;
+  font-size: 16px;
+  height: 1.75rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  outline: none;
+  text-align: center;
+  width: 40%;
+}
