--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -27,16 +27,21 @@
   &__error {
     background-color: #C54842;
     color: whitesmoke;
-    font-size: 12px;
+    font-size: 16px;
     font-weight: bold;
     left: 3px;
     position: absolute;
-    top: 36px;
+    top: 34px;
   }
   
   &__terms {
     margin: 2rem 1rem 1rem;
     font-size: 14px;
+
+    &__checkbox {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 
   &__logout {
