--- a/templates/logged.html
+++ b/templates/logged.html
@@ -13,7 +13,7 @@
         alt="Covid-19 Avatar"
       >
     </div>
-    <h2>Bienvenido al training COVID-19 de Rayos-X</h2>
+    <h2>Bienvenido a COVID-19 Training</h2>
 
     Por favor, selecciona tu especialidad para continuar:
     <form action="/training" method="POST">
