--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,7 @@
     </div>
     <div class="login__terms">
       <input
+        class="login__terms__checkbox"
         type="checkbox"
         id="terms"
         onclick="checkTerms()"
