--- a/static/styles/base.scss
+++ b/static/styles/base.scss
@@ -3,6 +3,29 @@ body {
   background-attachment: fixed;
 }
 
+select {
+  background-color: #555;
+  border: 1px solid #ffc000;
+  border-radius: 4px;
+  color: whitesmoke;
+  font-size: 16px;
+  height: 1.75rem;
+  margin-top: 0.5rem;
+  outline: none;
+
+  &:hover {
+    background-color: rgba(255, 192, 0, 0.75);
+    color: #272727;
+  }
+
+  option {
+    &:hover {
+      background-color: #ffc000;
+      color: #272727;
+    }
+  }
+}
+
 .covid-button {
   background: rgba(255, 255, 255, 0.25);
   border: 1px solid #ffc000;
@@ -18,8 +41,9 @@ body {
 
   &:hover {
     background-color: rgba(255, 192, 0, 0.75);
-    color: rgb(39, 39, 39);
+    color: #272727;
   }
+
   &:active {
     background-color: #ffc000;
     color: black;
@@ -67,4 +91,4 @@ body {
 img { 
   width:100%; 
   height:100%; 
-} 
+}
