Add about section

--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -1,8 +1,7 @@
 .login {
-  padding-top: 1rem;
-
   &__avatar {
     margin: auto;
+    margin-top: 1rem;
     width: 120px;
     img {
       border-radius: 8px;
