--- a/templates/training.html
+++ b/templates/training.html
@@ -1,9 +1,18 @@
-{% extends 'base.html' %}
-
+{% extends 'index.html' %}
 {% block title %}Training{% endblock %}
+{% block head %}
+  {{ super() }}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script src="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.min.js"></script>
+  <script type="text/javascript">
+    $(function () {
+      $('.zoom').zoomy();
+    });
+  </script>
+{% endblock %}
 
 {% block content %}
-<div class="training">
+<div class="content training">
   <div class="training__actions">
     <div class="training__end" >
       <button
