--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -8,6 +8,7 @@ select {
   border: 1px solid #ffc000;
   border-radius: 4px;
   color: whitesmoke;
+  cursor: pointer;
   font-size: 16px;
   height: 1.75rem;
   margin-top: 0.5rem;
@@ -65,12 +66,13 @@ select {
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid #ffc000;
     border-radius: 4px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3.5rem;
     margin: 3.5rem auto 2rem;
     padding: 1rem;
     width: 70%;
+
+    &__wrapper {
+      width: 100%;
+    }
   }
 
   .footer {
@@ -92,3 +94,11 @@ img {
   width:100%; 
   height:100%; 
 }
+
+@media (max-width: 800px) {
+  .page-wrapper {
+    .content {
+      width: 100%;
+    }
+  }
+} 
